--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "compression": "^1.7.4",
+    "crypto-js": "^4.2.0",
     "express": "^4.21.0",
     "helmet": "^8.0.0",
+    "node-forge": "^1.3.1",
     "pdf-lib": "^1.17.1"
   }
 }
